Changes to be committed: 	new file:   images/proj_2.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -326,26 +326,23 @@
 					<span class="date">(JAN-MAR 2024)</span>
 					<h2>Cyber Security Virtual Internship</h2>
 					<span class="position">Palo Alto</span>
-					<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
+					<p class="mt-4">Information about the  Networking attacks
 						<ul>
-							<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
-							<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI, Tableau and Python.</li>
-							<li>Performed migration and enhancements for merchandising dashboard, involved data integration and its feature improvement.</li>
+							<li>Delivered multiple training and mentorship sessions on Networking tools.</li>
 						</ul>
 					</p>
 				</div>
-
+				
 			</div>
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">(SEP-NOV 2023)</span>
-						<h2>Android Developer Virtual Internship</h2>
-						<span class="position">Google For Developers</span>
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
-							<ul>
-								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date">(SEP-NOV 2023)</span>
+					<h2>Android Developer Virtual Internship</h2>
+					<span class="position">Google For Developers</span>
+					<p class="mt-4">Develope the User Interface
+						<ul>
+								<li>Delivered multiple training and mentorship sessions on Android Studio.</li>
+								<li>Creating the Android Application</li>
 							</ul>
 						</p>
 					</div>
@@ -408,23 +405,26 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
-                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
+                <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/E_MartApp_flutter.git">E-commerce Mobile App</a></h3>
+                <p>E-commerce Shopping | Cross Platform Application | with Frontend And Backend | Firebase for DataBase.
+				</p>
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-4 d-flex ftco-animate">
+        <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://github.com/Arjit-Sharma001/object_detection_app" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/object_detection_app">Object Detection App</a></h3>
+                <p>Application AI | Flutter Realtime Object Detection | Flutter Deep Learning | TensorFlow | TFlite.
+
+				</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex ftco-animate">
+          <!--   <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
@@ -445,18 +445,18 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
+				  <h3 class="heading"><a href="#">Sales Forecast- Time Series Forecasting</a></h3>
 				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="#" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
+				  <h3 class="heading"><a href="#">Customer Segmentation using clustering model</a></h3>
 				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
 				</div>
 			  </div>
@@ -466,7 +466,7 @@
     </section>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
-      <div class="container">
+      <!-- <div class="container">
 		<div class="row d-md-flex align-items-center">
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
@@ -488,7 +488,7 @@
             <div class="block-18">
               <div class="text">
                 <strong class="number" data-number="1000">0</strong>
-                <span>Mentored Students</span>
+                <span>Certefyed</span>
               </div>
             </div>
           </div>
@@ -501,14 +501,14 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 	
 	  <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
 			<!-- <div class="container"> -->
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>More projects on<span> Github  </span> </h2>
-						<div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4>
+						<div class="heading"> <h4>  </h4>
 						<br>
 						<p><a href="https://github.com/Arjit-Sharma001" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
