--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/object_detection_app">Object Detection App</a></h3>
-                <p>Application AI | Flutter Realtime Object Detection | Flutter Deep Learning | TensorFlow | TFlite.
+                <p>Application Ai | Flutter Realtime Object Detection | Flutter Deep Learning | TensorFlow | TFlite.
 
 				</p>
               </div>
@@ -495,7 +495,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="500">0</strong>
+              <strong class="number" data-number="500">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
