new file:   images/CV_Arjit_A60205221244.pdf 	modified:   images/proj_2.jpg 	new file:   images/proj_3.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="5">0</span> <span>+</span>
+									<span class="number" data-number="3">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/arjit-sharma001/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -381,7 +381,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="images/CV_Arjit_A60205221244.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -411,75 +411,49 @@
               </div>
             </div>
           </div>
-        <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/Arjit-Sharma001/object_detection_app" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/object_detection_app">Object Detection App</a></h3>
-                <p>Application Ai | Flutter Realtime Object Detection | Flutter Deep Learning | TensorFlow | TFlite.
-
-				</p>
-              </div>
-            </div>
-          </div>
-          <!--   <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-	<br>
-		 added justify-content-center to center align the last two projects 
-		<div class="row d-flex justify-content-center">  
-			<div class="col-md-4 d-flex ftco-animate">
+		  <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/Arjit-Sharma001/ai_assistant" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="#">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/ai_assistant">AI Voice Assistant App</a></h3>
+				  <p>Ai Assistant Application | Flutter Voice Assistant | Chatgpt Voice Command | Gemini.
+  
+				  </p>
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-4 d-flex ftco-animate">
+		  <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="#" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/Arjit-Sharma001/object_detection_app" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="#">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/object_detection_app">Object Detection App</a></h3>
+				  <p>Machine Learning Application | Flutter Realtime Object Detection | Flutter Deep Learning | TensorFlow | TFlite.
+				  </p>
 				</div>
 			  </div>
 			</div>
-		 </div> -->
 	  </div>
     </section>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
-      <!-- <div class="container">
+      <div class="container">
 		<div class="row d-md-flex align-items-center">
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+          <!-- <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
                 <strong class="number" data-number="20">0</strong>
                 <span>Achievements</span>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="30">0</strong>
+                <strong class="number" data-number="3">0</strong>
                 <span>Projects</span>
               </div>
             </div>
@@ -487,7 +461,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1000">0</strong>
+                <strong class="number" data-number="4">0</strong>
                 <span>Certefyed</span>
               </div>
             </div>
@@ -495,16 +469,16 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-              <strong class="number" data-number="500">0</strong>
+              <strong class="number" data-number="50">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 	
 	  <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-			<!-- <div class="container"> -->
+			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>More projects on<span> Github  </span> </h2>
@@ -514,7 +488,7 @@
 						</div>
 					</div>
 				</div>
-			<!-- </div> -->
+			</div>
 		</div>
 	</section>
 
@@ -537,34 +511,34 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Madhya Pradesh, India</p>
+	            <p>Gwalior, Madhya Pradesh, India</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
+				<a href="tel:9479463478"><div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
-          		</div>
+          		</div></a>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+91 9479463478</a></p>
+	            <p><a href="tel:9479463478">+91 9479463478</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
+				<a href="mailto:arjitsharma152@gmail.com"><div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-paper-plane"></span>
-          		</div>
+          		</div></a>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">arjitsharma152@gmail.com</a></p>
+	            <p><a href="mailto:arjitsharma152@gmail.com">arjitsharma152@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-globe"></span>
-          		</div>
+				<a href="images/CV_Arjit_A60205221244.pdf"><div class="icon d-flex align-items-center justify-content-center">
+				<span class="icon-globe"></span>
+          		</div></a>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="images/CV_Arjit_A60205221244.pdf">resumelink</a></p>
 	          </div>
           </div>
 
