--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 									<li class="d-flex"><span>Profile:</span> <span>AI/ML, Android & Flutter Development.</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Computer Science, Software Development, Mobile Dev &amp; Data Science</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering in Computer Science</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>App Deployment, Bot Deployment, Automation, Enable API, Add's Run, LLM Training, Prompt Engineering SQL, Excel, Git, Google Analytics &amp; Flutter</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>App Deployment, Bot Deployment, Automation, Enable API, Add's Run, LLM Training, Prompt Engineering SQL, Excel, Git, Docker, Google Analytics &amp; Flutter</span></li>
 									<li class="d-flex"><span>Tools:</span> <span>Google cloud Run,Google Chat App, TensorFlow, Git, Firebase, Postman</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Gaming, eSports</span></li>
@@ -433,12 +433,12 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/Arjit-Sharma001/" class="block-20 zoom-effect" style="background-image: url('images/proj_4.png');" target="_blank">
+              <a href="https://github.com/Arjit-Sharma001/ezzyBill" class="block-20 zoom-effect" style="background-image: url('images/proj_4.png');" target="_blank">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/" target="_blank">ezzyBill Mobile App</a></h3>
-                <p>Billing System | Salse Analytics | Authentication | with Frontend And Backend | Firebase for DataBase.
+                <h3 class="heading"><a href="https://github.com/Arjit-Sharma001/ezzyBill" target="_blank">ezzyBill Mobile App</a></h3>
+                <p>Billing System | Salse Analytics | Authentication | with Frontend And Backend | Firebase for DataBase | Cloud Based Application.
 				</p>
               </div>
             </div>
