--- a/index.html
+++ b/index.html
@@ -340,6 +340,19 @@
 					</p>
 				</div>
 			</div>
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date">(MAR 2024 - Current)</span>
+					<h2>LLM Training Intern (REMOTE)</h2>
+					<span class="position">Outlier.AI</span>
+					<p class="mt-4">Contributing to the training and evaluation of large language models (LLMs).
+						<ul>
+							<li> Annotated, rated, and evaluated LLM responses</li>
+							<li> Designed multimodal tasks across image, text and audio</li>
+						</ul>
+					</p>
+				</div>
+			</div>
 		</div>
 		<br>
 		<br>
