--- a/index.html
+++ b/index.html
@@ -329,30 +329,23 @@
 
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
-					<span class="date">(MAR 2024 - Current)</span>
-					<h2>LLM Training Intern (REMOTE)</h2>
-					<span class="position">Outlier.AI</span>
-					<p class="mt-4">Contributing to the training and evaluation of large language models (LLMs).
+					<span class="date">(JUNE 2024 - JULY 2025)</span>
+					<h2>Flutter Developer</h2>
+					<span class="position">InfoSparkles IT Solution LLP</span>
+					<p class="mt-4">As a Flutter Developer Spearheading the development of cross-platform mobile applications using Flutter
+with integration of Firebase for backend services.
 						<ul>
-							<li> Annotated, rated, and evaluated LLM responses</li>
-							<li> Designed multimodal tasks across image, text and audio</li>
+							<li> Implemented real-time features such as user authentication, data sync, and cloud messaging.
+Designed and integrated responsive UIs with custom widgets to ensure consistency across Android and
+iOS platforms.</li>
+							<li>  Integrated REST APIs and ensured efficient error handling, caching, and network calls using http, dio,
+and provider packages.</li>
+<li> Collaborated with the design and backend teams for seamless UI/UX and database interactions</li>
 						</ul>
 					</p>
 				</div>
 			</div>
-			<div class="col-md-6">
-				<div class="resume-wrap ftco-animate">
-					<span class="date">(MAR 2024 - Current)</span>
-					<h2>LLM Training Intern (REMOTE)</h2>
-					<span class="position">Outlier.AI</span>
-					<p class="mt-4">Contributing to the training and evaluation of large language models (LLMs).
-						<ul>
-							<li> Annotated, rated, and evaluated LLM responses</li>
-							<li> Designed multimodal tasks across image, text and audio</li>
-						</ul>
-					</p>
-				</div>
-			</div>
+			
 		</div>
 		<br>
 		<br>
@@ -364,7 +357,19 @@
 		<br>
 		
 		<div class="row">
-
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date">(OCT 2024 - MARCH 2025)</span>
+					<h2>LLM Training Intern (REMOTE)</h2>
+					<span class="position">Outlier.AI</span>
+					<p class="mt-4">Contributing to the training and evaluation of large language models (LLMs).
+						<ul>
+							<li> Annotated, rated, and evaluated LLM responses</li>
+							<li> Designed multimodal tasks across image, text and audio</li>
+						</ul>
+					</p>
+				</div>
+			</div>
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
 					<span class="date">(JAN-MAR 2024)</span>
