--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<br>
 						<br>
 			            <h2>AI + Flutter Developer</h2>
-						<h2 class="d-flex" style="margin-bottom: 0">With over 3 years of experience</h2>
+						<h2 class="d-flex" style="margin-bottom: 0">With over 1+ years of experience</h2>
 						<br>
 			            <p><a href="https://www.linkedin.com/in/arjit-sharma001/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
 							<a href="https://github.com/Arjit-Sharma001" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
@@ -220,9 +220,9 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Arjit Sharma</span></p>
-										<p><span class="title-s">Job Role: </span> <span>OUTLIER.AI  LLM TRAINING INTERNSHIP REMOTE </span></p>
+										<p><span class="title-s">Job Role: </span> <span>Flutter Developer | InfoSparkles IT Solution LLP </span></p>
 										<p><span class="title-s">Experience: </span> <span>1+ Years</span></p>
-										<p><span class="title-s">Address: </span> <span>Madhya Pradesh, India</span></p>
+										<p><span class="title-s">Address: </span> <span>Uttar Pradesh, India</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -598,7 +598,7 @@ and provider packages.</li>
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Gwalior, Madhya Pradesh, India</p>
+	            <p> Uttar Pradesh, India</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
