--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Arjit Sharma</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Flutter Developer | InfoSparkles IT Solution LLP </span></p>
+										<p><span class="title-s">Job Role: </span> <span>Flutter Developer | @InfoSparkles IT Solution LLP </span></p>
 										<p><span class="title-s">Experience: </span> <span>1+ Years</span></p>
 										<p><span class="title-s">Address: </span> <span>Uttar Pradesh, India</span></p>
 									  </div>
