Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   images/CV_Arjit_A60205221244.pdf.pdf
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -319,36 +319,12 @@
           </div>
         </div>
 
-		<div class="row">
+		<!-- <div class="row">
 			<h1 class="big-4">Work Experience</h1>
 			<div class="underline"></div>
 		</div>
-		<br>
+		<br> -->
 		
-		<div class="row">
-
-			<div class="col-md-6">
-				<div class="resume-wrap ftco-animate">
-					<span class="date">(JUNE 2024 - JULY 2025)</span>
-					<h2>Flutter Developer</h2>
-					<span class="position">InfoSparkles IT Solution LLP</span>
-					<p class="mt-4">As a Flutter Developer Spearheading the development of cross-platform mobile applications using Flutter
-with integration of Firebase for backend services.
-						<ul>
-							<li> Implemented real-time features such as user authentication, data sync, and cloud messaging.
-Designed and integrated responsive UIs with custom widgets to ensure consistency across Android and
-iOS platforms.</li>
-							<li>  Integrated REST APIs and ensured efficient error handling, caching, and network calls using http, dio,
-and provider packages.</li>
-<li> Collaborated with the design and backend teams for seamless UI/UX and database interactions</li>
-						</ul>
-					</p>
-				</div>
-			</div>
-			
-		</div>
-		<br>
-		<br>
 
 		<div class="row">
 			<h1 class="big-4">Internship</h1>
@@ -607,7 +583,7 @@ and provider packages.</li>
           			<span class="icon-phone2"></span>
           		</div></a>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel:9479463478">+91 9479463478</a></p>
+	            <p><a href="tel:9479463478">+91 9893558524</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -640,9 +616,9 @@ and provider packages.</li>
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span class="icon-youtube"></span></a></li> -->
+					  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@"><span class="icon-youtube"></span></a></li> -->
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/arjit-sharma001/"><span class="icon-linkedin"></span></a></li>  
-					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-twitter"></span></a></li> -->
+					  <!-- <li class="ftco-animate"><a href="https://twitter.com/"><span class="icon-twitter"></span></a></li> -->
 					  <li class="ftco-animate"><a href="https://www.facebook.com/arjit.sharma.140"><span class="icon-facebook"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/arjit.sharmaa/"><span class="icon-instagram"></span></a></li>
 					</ul>
